--- a/public/assets/css/skin-theme.css
+++ b/public/assets/css/skin-theme.css
@@ -527,7 +527,13 @@ button[disabled] {
 .deal-section .product-content .product-label span.percent-count,
 .single-product-wrap .product-label span.percent-count {
     color: #fff;
-    background-color: #6b9553
+    background-color: #6b9553;
+}
+
+.deal-section .product-content .product-label span.sale,
+.single-product-wrap .product-label span.sale {
+    color: #fff;
+    background-color: #ee433f;
 }
 
 .single-product-wrap .product-label span.soldout-title {
@@ -550,11 +556,22 @@ button[disabled] {
 
 .deal-section .product-content .product-label span.percent-count,
 .single-product-wrap .product-label span.percent-count {
+    left: 15px
+}
+
+.deal-section .product-content .product-label span.sale,
+.single-product-wrap .product-label span.sale {
     right: 15px
 }
 
 .deal-section .product-content:hover .product-label span.percent-count,
 .single-product-wrap:hover .product-image .product-label span.percent-count {
+    opacity: 0;
+    visibility: visible
+}
+
+.deal-section .product-content:hover .product-label span.sale,
+.single-product-wrap:hover .product-image .product-label span.sale {
     opacity: 0;
     visibility: visible
 }
@@ -565,6 +582,17 @@ button[disabled] {
 .single-product-wrap:hover .product-image .product-label span.sale-title,
 .deal-section .product-content .product-label span.percent-count,
 .single-product-wrap:hover .product-image .product-label span.percent-count {
+    -webkit-transition: all .3s ease-in-out 0s;
+    -o-transition: all .3s ease-in-out 0s;
+    transition: all .3s ease-in-out 0s
+}
+
+.single-product-wrap .product-image .product-label span.new-sale-title,
+.single-product-wrap .product-image .product-label span.sale,
+.single-product-wrap:hover .product-image .product-label span.new-title,
+.single-product-wrap:hover .product-image .product-label span.sale-title,
+.deal-section .product-content .product-label span.sale,
+.single-product-wrap:hover .product-image .product-label span.sale {
     -webkit-transition: all .3s ease-in-out 0s;
     -o-transition: all .3s ease-in-out 0s;
     transition: all .3s ease-in-out 0s
