--- a/public/assets/css/front.style.css
+++ b/public/assets/css/front.style.css
@@ -5992,4 +5992,49 @@ ul.grid li .collection-content a:hover {
 {
     font-size: 1.25rem !important;
 }
+.pagination li {
+    margin: 0 4px;
+}
+
+.pagination li a {
+    filter: drop-shadow(0px 0px 11px rgba(0, 0, 0, 0.1));
+    border-radius: 100%;
+    padding: 20px;
+    font-size: 14px;
+    color: var(--primary-color);
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 0;
+    height: 0;
+}
+
+.page-item.active .page-link {
+    z-index: 3;
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+    filter: drop-shadow(0px 0px 11px rgba(0, 0, 0, 0.1));
+    border-radius: 100%;
+    padding: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 0;
+    height: 0;
+    border-radius: 100%;
+}
+
+.pagination li:hover a {
+    background-color: var(--primary-color);
+    color: #fff;
+}
+
+.page-item:last-child .page-link,
+.page-item:first-child .page-link {
+    border-radius: 100%;
+}
 /*# sourceMappingURL=/s/files/1/0641/3431/6288/t/2/assets/style.css.map?v=101277586707833005891650976613 */
