--- a/public/assets/css/front.style.css
+++ b/public/assets/css/front.style.css
@@ -6013,8 +6013,8 @@ ul.grid li .collection-content a:hover {
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd;
+    background-color: var(--font-color-primary);
+    border-color: var(--font-color-primary);
     filter: drop-shadow(0px 0px 11px rgba(0, 0, 0, 0.1));
     border-radius: 100%;
     padding: 20px;
