--- a/public/assets/css/front.style.css
+++ b/public/assets/css/front.style.css
@@ -4026,7 +4026,7 @@ ul.pro_social_link li a i {
 /* swiper button css */
 .slider-category .category-area {
     position: relative;
-    display: flex;
+    display: block;
 }
 
 .slider-category .swiper-buttons button {
@@ -5991,6 +5991,8 @@ ul.grid li .collection-content a:hover {
 .flat-social #social-links>ul>li>a>span
 {
     font-size: 1.25rem !important;
+    color: #ed1c24;
+
 }
 .pagination li {
     margin: 0 4px;
@@ -6038,3 +6040,28 @@ ul.grid li .collection-content a:hover {
     border-radius: 100%;
 }
 /*# sourceMappingURL=/s/files/1/0641/3431/6288/t/2/assets/style.css.map?v=101277586707833005891650976613 */
+
+.share_custom ~ #social-links {
+    transform: translateY(0);
+    position: absolute;
+    right: 5px;
+    opacity: 0;
+    background: rgba(0, 0, 0, 0.5);
+    transition: 0.4s;
+}
+
+.share_custom:hover ~ #social-links {
+    opacity: 1;
+    transform: translateY(-164px);
+}
+
+.share_custom ~ #social-links ul{
+    display: block !important;
+
+}
+
+
+.share_custom ~ #social-links:hover {
+    opacity: 0.8;
+    transform: translateY(-164px);
+}
