--- a/assets/css/skin-theme.css
+++ b/assets/css/skin-theme.css
@@ -477,7 +477,9 @@ button[disabled] {
 
 .banner-hover a.banner-img img {
     border-radius: 0;
-    width: 100%
+    width: 100%;
+    max-height: 150px;
+
 }
 
 .single-product-wrap {
