--- a/public/assets/css/front.style.css
+++ b/public/assets/css/front.style.css
@@ -5809,7 +5809,7 @@ ul.grid {
 }
 
 ul.grid li {
-    width: calc(25% - 30px);
+    width: 25%;
     margin: 30px 0 0 30px;
     position: relative;
     cursor: pointer;
