--- a/public/assets/css/front.style.css
+++ b/public/assets/css/front.style.css
@@ -5810,7 +5810,7 @@ ul.grid {
 
 ul.grid li {
     width: 25%;
-    margin: 30px 0 0 30px;
+    margin: 30px 0 0 0;
     position: relative;
     cursor: pointer;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
